resolve some bugs with first login and createsingleuser

--- a/NumAndDrive/Views/Driver/Index.cshtml
+++ b/NumAndDrive/Views/Driver/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="row d-flex justify-content-center align-items-center mt-5">
         <div class="col-6">
-            <a asp-controller="" asp-action="" class="btn text-custom-color-blue custom-bottom-shadow fs-1 border border-dark">Ajouter une nouvelle annonce</a>
+            <a asp-controller="Journey" asp-action="Add" class="btn text-custom-color-blue custom-bottom-shadow fs-1 border border-dark">Ajouter une nouvelle annonce</a>
         </div>
     </div>
 </div>
