--- a/NumAndDrive/Views/Account/FirstLogin.cshtml
+++ b/NumAndDrive/Views/Account/FirstLogin.cshtml
@@ -1,15 +1,17 @@
 ﻿@using NumAndDrive.ViewModels
 @model ChangePasswordViewModel
 
+
 <div class="row">
     <div class="container w-25 d-flex align-items-center">
         <div class="card p-3">
             <div class="card-body">
-                <h5 class="card-title text-center">Changer le mot de passe</h5>
+                <h5 class="card-title text-center">Première connexion</h5>
+
                 <form asp-action="FirstLogin">
-                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group mt-3">
-                        <label asp-for="NewPassword" class="control-label">Nouveau mot de passe</label>
+                        <label asp-for="NewPassword" class="control-label">Votre nouveau mot de passe</label>
                         <input type="password" asp-for="NewPassword" class="form-control" />
                         <span asp-validation-for="NewPassword" class="text-danger"></span>
                     </div>
@@ -18,9 +20,48 @@
                         <input type="password" asp-for="ConfirmNewPassword" class="form-control" />
                         <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
                     </div>
-                    <div class="form-group align-items-center mt-3">
-                        <button type="submit" class="btn custom-color-orange text-white custom-bottom-shadow ">Changer le mot de passe</button>
+
+                    <div>
+                        <label asp-for="StatusId" class="col-form-label">Votre statut</label>
                     </div>
+                    <div>
+                        <select asp-for="StatusId" class="form-control">
+                            <option value="">- Sélectionner -</option>
+                            @if (Model.Statuses != null && Model.Statuses.Count() > 0)
+                            {
+                                foreach (var status in Model.Statuses)
+                                {
+                                    <option value="@status.StatusId">@status.Type</option>
+                                }
+                            }
+                        </select>
+                    </div>
+                    <div>
+                        <span class="text-custom-color-orange" asp-validation-for="StatusId"></span>
+                    </div>
+
+                <div>
+                    <label asp-for="DepartmentId" class="col-form-label">Votre service ou classe</label>
+                </div>
+                <div>
+                    <select asp-for="DepartmentId" class="form-control">
+                        <option value="">- Sélectionner -</option>
+                        @if (Model.Departments != null && Model.Departments.Count() > 0)
+                        {
+                            foreach (var department in Model.Departments)
+                            {
+                                <option value="@department.DepartmentId">@department.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+                <div>
+                    <span class="text-custom-color-orange" asp-validation-for="DepartmentId"></span>
+                </div>
+                <div class="form-group align-items-center mt-3">
+                    <button type="submit" class="btn custom-color-orange text-white custom-bottom-shadow ">Changer le mot de passe</button>
+                </div>
+
                 </form>
             </div>
         </div>
