Feat: getJourneys' view has now its frontend

--- a/NumAndDrive/Views/Home/Index.cshtml
+++ b/NumAndDrive/Views/Home/Index.cshtml
@@ -1,25 +1,25 @@
 ﻿
-    <div class="container">
-        <div class="row vh-75 d-flex justify-content-center align-items-center gap-5">
-            <div class="col-5">
-                <a asp-controller="Driver" asp-action="Index" class="text-decoration-none">
-                    <div class="card custom-color-blue border-0 shadow mb-3 p-2 vh-50">
-                        <div class="card-body d-flex align-items-center flex-column">
-                            <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
-                            <p class="card-text text-white fs-1 fw-bold m-5">Conducteur</p>
-                        </div>
+<div class="container">
+    <div class="row vh-75 d-flex justify-content-center align-items-center gap-5">
+        <div class="col-5">
+            <a asp-controller="Driver" asp-action="Index" class="text-decoration-none">
+                <div class="card custom-color-blue border-0 shadow mb-3 p-2 vh-50">
+                    <div class="card-body d-flex align-items-center flex-column">
+                        <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
+                        <p class="card-text text-white fs-1 fw-bold m-5">Conducteur</p>
                     </div>
-                </a>
-            </div>
-            <div class="col-5">
-                <a asp-controller="" asp-action="" class="text-decoration-none">
-                    <div class="card custom-color-orange border-0 shadow mb-3 p-2 vh-50">
-                        <div class="card-body d-flex align-items-center flex-column">
-                            <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
-                            <p class="card-text text-white fs-1 fw-bold m-5">Passager</p>
-                        </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-5">
+            <a asp-controller="Journey" asp-action="getJourneys" class="text-decoration-none">
+                <div class="card custom-color-orange border-0 shadow mb-3 p-2 vh-50">
+                    <div class="card-body d-flex align-items-center flex-column">
+                        <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
+                        <p class="card-text text-white fs-1 fw-bold m-5">Passager</p>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
     </div>
+</div>
