--- a/NumAndDrive/wwwroot/css/site.css
+++ b/NumAndDrive/wwwroot/css/site.css
@@ -1,24 +1,24 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .custom-color-orange {
@@ -61,8 +61,20 @@ body {
     margin: 100px auto;
 }
 
+.vh-3 {
+    height: 3vh;
+}
+
 .vh-5 {
     height: 5vh;
+}
+
+.vh-10 {
+    height: 10vh;
+}
+
+.vh-15 {
+    height: 15vh;
 }
 
 .vh-25 {
@@ -79,6 +91,10 @@ body {
 
 .vh-60 {
     height: 60vh;
+}
+
+.vh-70 {
+    height: 70vh;
 }
 
 .vh-75 {
