--- a/NumAndDrive/Views/Home/Index.cshtml
+++ b/NumAndDrive/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row vh-75 d-flex justify-content-center align-items-center gap-5">
         <div class="col-5">
-            <a asp-controller="Driver" asp-action="Index" class="text-decoration-none">
+            <a asp-controller="Journey" asp-action="Index" class="text-decoration-none">
                 <div class="card custom-color-blue border-0 shadow mb-3 p-2 vh-50">
                     <div class="card-body d-flex align-items-center flex-column">
                         <img src="../img/profile-pic-white.png" class="card-text m-4 vh-25" alt="Avatar">
