--- a/NumAndDrive/Views/Shared/_Layout.cshtml
+++ b/NumAndDrive/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
             <ul class="nav col-md-4 justify-content-end">
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Accueil</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">À propos</a></li>
+                <li class="nav-item"><a asp-controller="Home" asp-action="PolitiqueConfidentialite" class="nav-link px-2 text-body-secondary">À propos</a></li>
             </ul>
         </div>
     </footer>
