--- a/NumAndDrive/Views/Journey/GetJourneys.cshtml
+++ b/NumAndDrive/Views/Journey/GetJourneys.cshtml
@@ -34,11 +34,11 @@
             </div>
         </div>
         <div class="row vh-70 border border-black rounded-bottom custom-bottom-shadow overflow-hidden">
-            <div class="col-3 vh-70 border-end border-black p-0 overflow-auto">
+            <div class="col-3 vh-70 border-end border-black p-0 overflow-auto" id="journeyList">
                 @foreach (var journey in Model)
                 {
-                    <a asp-controller="user" asp-action="index" class="text-decoration-none text-black">
-                        <div class="row vh-15 border-bottom border-black p-2 d-flex align-items-center">
+                    <a class="nav-link active">
+                        <div class="ploup row vh-15 border-bottom border-black p-2 d-flex align-items-center" journey-id="@journey.JourneyId">
                             <div class="col-5 gap-2">
                                 <div class="row mb-4">
                                     <p class="m-0">@journey.AddressDeparting.City > @journey.AddressIncoming.City</p>
@@ -62,94 +62,20 @@
                     </a>
                 }
             </div>
-            <div class="col-9 d-flex flex-column justify-content-center">
-                <div class="row mt-3">
-                    <p class="text-center fs-2">Uckange > Metz</p>
-                </div>
-                <div class="row">
-                    <p class="text-center fs-2">16h30 > 16h30</p>
-                </div>
-                <div class="row">
-                    <div class="col mx-4">
-                        <table class="table table-bordered border-dark fs-3 text-center">
-                            <thead>
-                                <tr>
-                                    <th>L</th>
-                                    <th>M</th>
-                                    <th>M</th>
-                                    <th>J</th>
-                                    <th>V</th>
-                                    <th>S</th>
-                                    <th>D</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>X</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="row my-2 d-flex justify-content-around">
-                    <div class="col-2">
-                        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
-                            <p class="m-0">Animaux bienvenus</p>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
-                            <p class="m-0">Coffre plein</p>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
-                            <p class="m-0">Bavard</p>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
-                            <p class="m-0">Musique</p>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
-                            <p class="m-0">Non fumeur</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5 mb-2">
-                    <div class="col-7 d-flex justify-content-center align-items-center">
-                        <p class="fs-1 m-0">Reste 1 place</p>
-                    </div>
-                    <div class="col-5">
-                        <div class="row vh-5 d-flex justify-content-end">
-                            <div class="col-8 border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
-                                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Contacter Marie D.</a>
-                            </div>
-                        </div>
-                        <div class="row vh-5 d-flex justify-content-end">
-                            <div class="col-8 border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
-                                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Voir le profil de Marie D.</a>
-                            </div>
-                        </div>
-                        <div class="row vh-5 d-flex justify-content-end">
-                            <div class="col-8 border border-dark custom-color-blue text-custom-color-orange custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
-                                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Réserver ma place</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="col-9 d-flex flex-column justify-content-center" id="journeyDetails"></div>
         </div>
-    </div>
+        
+        </div>
 }
 
 
 
+@section Scripts {
+    <script>
+        $(document).on('click', '#journeyList .ploup', function () {
+            journeyId = $(this).attr('journey-id');
+            $("#journeyDetails").load("@Url.Action("JourneyDetails", "Journey")", { journeyId: journeyId });
+            console.log(journeyId);
+        });
+    </script>
+}
