--- a/NumAndDrive/Views/Journey/_JourneyDetails.cshtml
+++ b/NumAndDrive/Views/Journey/_JourneyDetails.cshtml
@@ -1,7 +1,92 @@
-﻿@using NumAndDrive.Models
-@model Journey
+﻿@using NumAndDrive.ViewModels
+@model JourneyCompanyViewModel
 
-<div>
-    <h2>@Model.User</h2>
-    <p>@Model.CreationDate</p>
+
+
+<div class="row mt-3">
+    <p class="text-center fs-2">@Model.AddressDeparting > @Model.AddressIncoming</p>
+</div>
+<div class="row">
+    <p class="text-center fs-2">Le @Model.DepartureDate à @Model.DepartureHour</p>
+</div>
+<div class="row">
+    <div class="col mx-4">
+        <table class="table table-bordered border-dark fs-3 text-center">
+            <thead>
+                <tr>
+                    <th>L</th>
+                    <th>M</th>
+                    <th>M</th>
+                    <th>J</th>
+                    <th>V</th>
+                    <th>S</th>
+                    <th>D</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>X</td>
+                    <td>X</td>
+                    <td>X</td>
+                    <td>X</td>
+                    <td>X</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="row my-2 d-flex justify-content-around">
+    <div class="col-2">
+        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
+            <p class="m-0">Animaux bienvenus</p>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
+            <p class="m-0">Coffre plein</p>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
+            <p class="m-0">Bavard</p>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
+            <p class="m-0">Musique</p>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="border rounded-circle border-black d-flex align-items-center vh-10 justify-content-center text-center custom-bottom-shadow">
+            <p class="m-0">Non fumeur</p>
+        </div>
+    </div>
+</div>
+<div class="row mt-5 mb-2">
+    <div class="col-7 d-flex justify-content-center align-items-center">
+        <p class="fs-1 m-0">Reste @Model.AvailableSpots place</p>
+    </div>
+    <div class="col-5">
+        <div class="row vh-5 d-flex justify-content-end">
+            <div class="col-8 border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
+                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Contacter @Model.UserFirstName @Model.UserLastName[0].</a>
+            </div>
+        </div>
+        <div class="row vh-5 d-flex justify-content-end">
+            <div class="col-8 border border-dark text-custom-color-blue custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
+                <a class="nav-link active" aria-current="page" asp-controller="" asp-action="">Voir le profil de @Model.UserFirstName @Model.UserLastName[0].</a>
+            </div>
+        </div>
+        <form asp-action="BookJourney" asp-controller="Journey" method="post">
+            <div class="row vh-5 d-flex justify-content-end">
+                <div class="col-8 border border-dark custom-color-blue text-custom-color-orange custom-bottom-shadow fw-bold d-flex justify-content-center text-center align-items-center mb-1 me-2">
+                    <input type="hidden" asp-for="JourneyId"/> 
+                    <button type="submit" class="nav-link active">Réserver ma place</button>
+                </div>
+            </div>
+        </form>
+
+    </div>
 </div>
