--- a/NumAndDrive/Views/User/_Settings.cshtml
+++ b/NumAndDrive/Views/User/_Settings.cshtml
@@ -1,6 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using NumAndDrive.ViewModels
+@model FirstLoginViewModel
 
+
+<form asp-action="ChangePassword" asp-controller="Account" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group mt-3">
+        <label asp-for="NewPassword" class="control-label">Votre nouveau mot de passe</label>
+        <input type="password" asp-for="NewPassword" class="form-control" />
+        <span asp-validation-for="NewPassword" class="text-danger"></span>
+    </div>
+    <div class="form-group mt-3">
+        <label asp-for="ConfirmNewPassword" class="control-label">Confirmez votre mot de passe</label>
+        <input type="password" asp-for="ConfirmNewPassword" class="form-control" />
+        <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
+    </div>
+    <div class="form-group align-items-center mt-3">
+        <button type="submit" class="btn custom-color-orange text-white custom-bottom-shadow ">Changer le mot de passe</button>
+    </div>
+</form>
