Design reworked + no longer able to archive admin because it is verified in method and admin is not displayed through users

--- a/NumAndDrive/Views/Admin/Details.cshtml
+++ b/NumAndDrive/Views/Admin/Details.cshtml
@@ -9,18 +9,18 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Identifiant</th>
-            <th>Prénom</th>
             <th>Nom</th>
+            <th>Prénom</th>
             <th>Adresse mail</th>
+            <th>Numéro de téléphone</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>@Model.Id</td>
-            <td>@Model.FirstName</td>
             <td>@Model.LastName</td>
+            <td>@Model.FirstName</td>
             <td>@Model.Email</td>
+            <td>@Model.PhoneNumber</td>
         </tr>
     </tbody>
 </table>
