--- a/NumAndDrive/Views/Admin/Index.cshtml
+++ b/NumAndDrive/Views/Admin/Index.cshtml
@@ -1,27 +1,35 @@
 ﻿@using NumAndDrive.ViewModels;
 @model AdminViewModel
 
-<div class="row">
-    <div class="col-4">
-        <div class="row d-flex justify-content-center">
-            <img src="/img/logo-detailed.png" alt="Logo" class="col-8" />
-        </div>
-        <div class="row">
-            <p class="p-0">@Model.NumberOfUsers utilisateurs</p>
-        </div>
-    </div>
-    <div class="col-8">
-        <div class="row border border-black rounded vh-75 d-flex align-items-center custom-bottom-shadow overflow-auto">
-            <h2 class="m-4">Importer les utilisateurs</h2>
-            <div class="col">
-                <p><span class="text-decoration-underline">Important :</span> le fichier doit répondre à des standards précis, sinon les données ne seront pas validées par l'application. Veuillez vous assurer que vous allez envoyer :
-                    <ul>
-                        <li>Un fichier .csv</li>
-                        <li>Avec des données valides</li>
-                        <li>Qui comporte 4 colonnes qui reprennent respectivement le prénom, le nom, le mail et le numéro de téléphone</li>
-                    </ul>
-                </p>
+<div class="vh-75 d-flex justify-content-between align-items-center">
+    <div class="w-25 h-100 d-flex flex-column justify-content-around">
+            <img src="/img/logo-detailed.png" alt="Logo" class="w-75 mx-auto" />
+            <h2 class="fw-semibold fs-4 text-center">Panel administrateur</h2>
+            <div class="border border-gray p-4">
+                <ul>
+                    <li>@Model.NumberOfUsers utilisateurs</li>
+                    <li>@Model.NumberOfJourneys voyages</li>
+                </ul>
+                <hr>
+                <p class="text-center fs-6">Application réalisée pour <span class="text-custom-color-orange fw-semibold">@Model.Company.Name</span> par JeCyMa</p>
             </div>
+    </div>
+    <div class="p-4 ms-5 w-75 h-100 border border-gray rounded custom-bottom-shadow overflow-auto">
+        <div class="d-flex justify-content-between">
+            <h2 class="m-4">Importer les utilisateurs</h2>
+            <svg class="vh-7 my-auto" id="arrow-add-initial-users" onclick="displayDiv(`arrow-add-initial-users`, `div-add-initial-users`)" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.70711 9.71069C5.31658 10.1012 5.31658 10.7344 5.70711 11.1249L10.5993 16.0123C11.3805 16.7927 12.6463 16.7924 13.4271 16.0117L18.3174 11.1213C18.708 10.7308 18.708 10.0976 18.3174 9.70708C17.9269 9.31655 17.2937 9.31655 16.9032 9.70708L12.7176 13.8927C12.3271 14.2833 11.6939 14.2832 11.3034 13.8927L7.12132 9.71069C6.7308 9.32016 6.09763 9.32016 5.70711 9.71069Z" fill="#0F0F0F" />
+            </svg>
+        </div>
+        <div class="d-none" id="div-add-initial-users">
+            <p>
+                <span class="fw-semibold">Important :</span> le fichier doit répondre à des standards précis, sinon les données ne seront pas validées par l'application. Veuillez vous assurer que vous allez envoyer :
+                <ul>
+                    <li>Un fichier .csv</li>
+                    <li>Avec des données valides</li>
+                    <li>Qui comporte 4 colonnes qui reprennent respectivement le prénom, le nom, le mail et le numéro de téléphone</li>
+                </ul>
+            </p>
             <form method="post" asp-controller="admin" asp-action="UploadUsersFromCSVFile" enctype="multipart/form-data">
                 <div class="text-custom-color-orange" asp-validation-summary="All"></div>
                 <div class="mb-3 row">
@@ -39,19 +47,46 @@
                     </div>
                 </div>
             </form>
-
-            <hr />
-
-            <h2 class="m-4">Liste des utilisateurs</h2>
-            <a class="btn custom-color-orange text-white custom-bottom-shadow col-4 m-3" asp-controller="Admin" asp-action="getUsers">Afficher la liste des utilisateurs</a>
-
-            <hr />
-
-            <h2 class="m-4">Ajouter un utilisateur</h2>
-            <a class="btn custom-color-orange text-white custom-bottom-shadow col-4 m-3" asp-controller="Admin" asp-action="createSingleUser">Créer</a>
         </div>
 
-        
+
+        <hr />
+
+        <div class="d-flex justify-content-between">
+            <h2 class="m-4">Liste des utilisateurs</h2>
+            <svg class="vh-7 my-auto" id="arrow-display-users" onclick="displayDiv(`arrow-display-users`, `div-display-users`)" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.70711 9.71069C5.31658 10.1012 5.31658 10.7344 5.70711 11.1249L10.5993 16.0123C11.3805 16.7927 12.6463 16.7924 13.4271 16.0117L18.3174 11.1213C18.708 10.7308 18.708 10.0976 18.3174 9.70708C17.9269 9.31655 17.2937 9.31655 16.9032 9.70708L12.7176 13.8927C12.3271 14.2833 11.6939 14.2832 11.3034 13.8927L7.12132 9.71069C6.7308 9.32016 6.09763 9.32016 5.70711 9.71069Z" fill="#0F0F0F" />
+            </svg>
+        </div>
+        <div class="d-none" id="div-display-users">
+            <a class="btn custom-color-orange text-white custom-bottom-shadow col-4 m-3" asp-controller="Admin" asp-action="getUsers">Afficher la liste des utilisateurs</a>
+        </div>
+
+
+        <hr />
+
+        <div class="d-flex justify-content-between">
+            <h2 class="m-4">Ajouter un utilisateur</h2>
+            <svg class="vh-7 my-auto" id="arrow-add-user" onclick="displayDiv(`arrow-add-user`, `div-add-user`)" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.70711 9.71069C5.31658 10.1012 5.31658 10.7344 5.70711 11.1249L10.5993 16.0123C11.3805 16.7927 12.6463 16.7924 13.4271 16.0117L18.3174 11.1213C18.708 10.7308 18.708 10.0976 18.3174 9.70708C17.9269 9.31655 17.2937 9.31655 16.9032 9.70708L12.7176 13.8927C12.3271 14.2833 11.6939 14.2832 11.3034 13.8927L7.12132 9.71069C6.7308 9.32016 6.09763 9.32016 5.70711 9.71069Z" fill="#0F0F0F" />
+            </svg>
+        </div>
+        <div class="d-none" id="div-add-user">
+            <a class="btn custom-color-orange text-white custom-bottom-shadow col-4 m-3" asp-controller="Admin" asp-action="createSingleUser">Créer</a>
+        </div>
     </div>
 </div>
 
+<script>
+    function displayDiv(classArrow, classDiv) {
+        let arrow = document.getElementById(classArrow);
+        let div = document.getElementById(classDiv);
+        if (arrow.classList.contains("rotate-180")) {
+            arrow.classList.remove("rotate-180");
+            div.classList.add("d-none");
+        } else {
+            arrow.classList.add("rotate-180");
+            div.classList.remove("d-none");
+        }
+    }
+</script>
