--- a/NumAndDrive/Views/Admin/GetUsersByName.cshtml
+++ b/NumAndDrive/Views/Admin/GetUsersByName.cshtml
@@ -3,49 +3,12 @@
 
 <a asp-controller="admin" asp-action="GetUsers" class="btn custom-color-orange text-white custom-bottom-shadow">Retour</a>
 
-<form asp-controller="admin" asp-action="GetUsersByName" class="mt-3 w-100 d-flex justify-content-end">
-    <input class="p-2 my-auto w-25" type="text" name="searchString" placeholder="Rechercher un utilisateur..." />
-    <button type="submit" class="ms-2 border custom-color-orange rounded custom-bottom-shadow p-2">
-        <svg fill="#ffffff" class="vh-3" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             viewBox="0 0 512.001 512.001" xml:space="preserve">
-<g>
-        <g>
-        <path d="M283.097,0C156.88,0,54.194,102.686,54.194,228.904c0,37.27,8.959,72.485,24.827,103.613l-58.247,58.247
-		c-27.699,27.697-27.699,72.766,0,100.463C34.622,505.077,52.814,512,71.005,512c18.192,0,36.385-6.924,50.232-20.773
-		l58.246-58.247c31.131,15.869,66.346,24.827,103.614,24.827c126.217,0,228.903-102.686,228.903-228.903S409.315,0,283.097,0z
-			M87.751,457.739c-9.235,9.235-24.256,9.232-33.489,0c-9.234-9.233-9.234-24.256,0-33.488l51.18-51.178
-		c9.983,12.279,21.209,23.504,33.488,33.488L87.751,457.739z M283.097,410.448c-100.103,0-181.544-81.441-181.544-181.544
-		S182.994,47.36,283.097,47.36S464.641,128.8,464.641,228.904S383.201,410.448,283.097,410.448z" />
-</g>
-</g>
-</svg>
-    </button>
-</form>
+@{
+    await Html.RenderPartialAsync("~/Views/Admin/_searchForm.cshtml");
+}
 
 <h2 class="m-5">@Model.Users.Count utilisateur(s) correspondant à la recherche : "@Model.Query"</h2>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Prénom</th>
-            <th>Adresse mail</th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model.Users)
-        {
-            <tr>
-                <td>@user.LastName</td>
-                <td>@user.FirstName</td>
-                <td>@user.Email</td>
-                <td><a asp-controller="admin" asp-action="details" asp-route-id="@user.Id"><img src="../img/icon-view.png" alt="Voir" height="30" /></a></td>
-                <td><a asp-controller="admin" asp-action="edit" asp-route-id="@user.Id"><img src="../img/icon-edit.png" alt="Modifier" height="30" /></a></td>
-                <td><a asp-controller="admin" asp-action="archive" asp-route-id="@user.Id"><img src="../img/icon-delete.png" alt="Archiver" height="30" /></a></td>
-            </tr>
-        }
-    </tbody>
-</table>
+@{
+    await Html.RenderPartialAsync("~/Views/Admin/_usersTable.cshtml", Model.Users);
+}
